--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,26 @@
 @font-face {
     font-family: 'anakin_mono';
-    src: url('/src/assets/anakinmono.ttf');
+    src: url('/src/assets/fonts/anakinmono.ttf');
+}
+
+@font-face {
+    font-family: 'exo2';
+    src: url('/src/assets/fonts/Exo2-SemiBoldItalic.ttf');
+}
+
+h1{
+    font-family: 'anakin_mono';
+    color: gold;
+}
+
+h2{
+    font-family: 'exo2';
+    color: snow;
+}
+
+
+body{
+    font-family: 'exo2';
+    background-image: linear-gradient(rgba(0, 5, 20, 0.5), rgba(223, 223, 179, 0.2)), url("../src/assets/background_star.PNG");
+    height:100vh;
 }
