--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,15 +1,58 @@
 .login{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
+/*input{
+    width: 50%;
+    margin: 10px;
+}*/
 
 input{
-    width: 50%;
+    width: 30vw;
     margin: 10px;
+    padding: 20px;
+    background-color: #6C0EFE;
+    outline: none;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    text-align: center;
+    font-size: 17px;
+    text-transform: capitalize;
+    transition: 0.2s;
+
 }
 
-button{
-    width: 50%;
-    margin: 10px;
+input::placeholder{
+    color: rgba(255, 255, 255, 0.815);
+    font-size: 16px;
+}
+input:focus{
+    transition: 0.5s;
+    width: 40vw;
+    transform: scale(1.1);
+    box-shadow: 0px 0px 30px 2px  #a425f83f;
 }
 
+/*button{
+    width: 50%;
+    margin: 10px;
+}*/
+
+button {
+    width: 10%;
+    margin: 10px;
+    padding: 20px;
+    background-color: #6C0EFE;
+    outline: none;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    text-align: center;
+    font-size: 17px;
+    text-transform: capitalize;
+    transition: 0.2s;
+}
