--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,9 +3,11 @@
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 60px;
-    position: relative;
-    background: transparent #F3F7FB;
+    height: 50px;
+    position: absolute;
+    background: transparent;
+    bottom: 0;
+    margin: 20px;
 }
 
 .buttonLogo {
