add local storage (faster back solution)

--- a/src/components/Swipe/Swipe.css
+++ b/src/components/Swipe/Swipe.css
@@ -10,15 +10,18 @@
     display: flex;
     width: 400px;
     height: 400px;
-    background-color: pink;
     border-radius: 10px;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+    background-color: transparent;
 }
 
 .characterImg img{
+    object-position: top;
     width: 90%;
     height: 90%;
+    border-radius: 10px;
 }
 
 .swipeBtn{
