--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -37,7 +37,7 @@ input:focus{
     transition: 0.5s;
     width: 30vw;
     transform: scale(1);
-    box-shadow: 0px 0px 40px 4px  #a425f83f;
+    box-shadow: 0px 0px 40px 4px  #954BC6;
 }
 
 /*button{
@@ -46,7 +46,6 @@ input:focus{
 }*/
 
 #buttonLogin {
-    width: 18%;
     margin: 10px;
     padding: 20px;
     background-color: #635BAC;
@@ -60,6 +59,13 @@ input:focus{
     transition: 0.2s;
     color: gold;
     font-family: anakin_mono;
+}
+
+#buttonLogin:focus {
+    transition: 0.5s;
+    width: 30vw;
+    transform: scale(1);
+    box-shadow: 0px 0px 40px 4px  #954BC6;
 }
 
 @media screen and (max-width:680px) {
