--- a/src/components/Swipe/Swipe.css
+++ b/src/components/Swipe/Swipe.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    margin: 50px;
 }
 
 .characterImg{
@@ -26,7 +27,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-
 }
 
 .startBtn{
