--- a/src/components/MatchCard.css
+++ b/src/components/MatchCard.css
@@ -30,10 +30,11 @@ h1 {
 
 .cardContainer {
     display : flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
     margin: 10px;
+    margin-top: 50px;
 }
 
 .imageCard {
