--- a/src/components/Swipe/Swipe.css
+++ b/src/components/Swipe/Swipe.css
@@ -5,6 +5,9 @@
     align-items: center;
     text-align: center;
     margin: 50px;
+    font-family: anakin_mono;
+    color: gold;
+    font-size: 20px;
 }
 
 .characterImg{
@@ -27,6 +30,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    margin: 20px;
 }
 
 .startBtn{
@@ -39,18 +43,20 @@
 }
 
 button {
-    width: 25%;
+    width: 50px;
     padding: 10px;
     background-color: transparent;
+    border-radius: 50px;
+    border: 1px #954BC6;
 }
 
 
-button:focus{
+/*button:focus{
     transition: 0.5s;
-    width: 30%;
+    width: 25%;
     transform: scale(1);
-    box-shadow: 0px 0px 40px 4px  #a425f83f;
-}
+    box-shadow: 0px 0px 40px 4px  #954BC6;
+}*/
 
 img {
     width: 35px;
