--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -46,7 +46,7 @@ input:focus{
 }*/
 
 #buttonLogin {
-    width: 20%;
+    width: 20vw;
     margin: 10px;
     padding: 20px;
     background-color: #635BAC;
@@ -75,7 +75,7 @@ input:focus{
     }
 
     #buttonLogin {
-        width: 50%;
+        width: 40vw;
     }
 
 }
