--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,44 @@ body{
     background-image: linear-gradient(rgba(0, 5, 20, 0.5), rgba(223, 223, 179, 0.2)), url("../src/assets/background_star.PNG");
     height:100vh;
 }
+
+#buttonLogin {
+    width: 15vw;
+    margin: 10px;
+    padding: 20px;
+    font-family: 'anakin_mono';
+    background-color: #635BAC;
+    border: none;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 24px;
+    text-transform: capitalize;
+    /* transition: 0.2s; */
+    color: gold;
+    opacity: 0.8;
+}
+
+a {
+    text-decoration: none;
+}
+
+#buttonLogin :hover{
+    cursor: pointer;
+}
+
+.secretBtn{
+    color: grey;
+    margin: 30px;
+    width: 20px;
+    height: 20px;
+}
+
+.secretBtn{
+    cursor: pointer;
+} 
+
+.loginContainerB {
+    display: flex;
+    justify-content: center;
+
+}
