--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@ a {
     flex-direction: row;
     justify-content: center;
     padding: 10px;
+    margin-bottom: 100px;
 }
 
 #buttonLogin :hover{
