--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,7 +6,8 @@
     height: 50px;
     background: transparent;
     margin: 20px;
-    position: absolute;
+    position: relative;
+    bottom: 0;
 }
 
 .buttonLogo {
@@ -22,5 +23,7 @@
         justify-content: space-around;
         align-items: center;
         margin: 15px;
+        position: relative;
+        bottom: 0;
     }
 }
